Block self-company donations and add contextual tab completion